delete images file, added images folder, added image in html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Heidy Thaw</h1>
 
 <nav>
-    <img src=""
+    <img src="images/heidylinkedinprofile.jpg" alt="picture of Heidy" widh="400">
 </nav>
 
 <nav>
