changed size of image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Heidy Thaw</h1>
 
 <nav>
-    <img src="images/heidylinkedinprofile.jpg" alt="picture of Heidy" widh="400">
+    <img src="images/heidylinkedinprofile.jpg" alt="picture of Heidy" widh="600" height="700">
 </nav>
 
 <nav>
