added a list, footer, and i edited the structure

--- a/index.html
+++ b/index.html
@@ -9,26 +9,24 @@
 
 <header>
 <h1>Heidy Thaw</h1>
-
-<nav>
-    <img src="images/heidylinkedinprofile.jpg" alt="picture of Heidy" widh="600" height="700">
-</nav>
-
-<nav>
-    <ul>
-        <li><a href=""></a></li>
-    </ul>
-</nav>
 </header>
 
-
 <main>
-
+    <nav>
+        <img src="images/heidylinkedinprofile.jpg" alt="picture of Heidy" widh="600" height="700">
+    </nav>
+    <nav>
+        <ul>
+            <li>041107573</li>
+            <li>Interactive Media Design</li>
+            <li>25S_MTM6201_020 Web Development II</li>
+            <li>I am a certified lash technician as of 2022</li>
+        </ul>
+    </nav>
 </main>
 
-
 <footer>
-
+    <p>&copy; Copyright 2025 Heidy Thaw</p>
 </footer>
     
 </body>
