--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <img src="images/heidylinkedinprofile.jpg" alt="picture of Heidy" widh="600" height="700">
     </nav>
     <nav>
+        <h2>Hello!</h2>
+    </nav>
+    <nav>
         <ul>
             <li>041107573</li>
             <li>Interactive Media Design</li>
